--- a/css/c_home.css
+++ b/css/c_home.css
@@ -1,6 +1,7 @@
 *{
 	font-family: sans-serif;
 }
+
 body{
 	margin: 0;
 	display: flex;
@@ -14,12 +15,56 @@ nav{
 }
 
 .header{
-	background-color: #97d4cd;
+	background-color: #6099BC;
 	display: flex;
 	height: 13vh;
 }
+
 .footer{
 	background-color: #b3b3b3;
 	display: flex;
 	height: 13vh;
+}
+
+.logo-img{
+	height: 100%;
+}
+
+.c_home_box1{
+	margin-top: 5vh;
+	width: 25vw;
+	background-color: #30103D;
+	color: #d3d3d3;
+	padding: 15px;
+	border-radius: 3px;
+}
+
+.content{
+	height: 74vh;
+	display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+label{
+	font-size: 1.5em;
+}
+
+.important{
+	text-decoration: none;
+	background-color: #6099BC;
+	width: 160px;
+	color: #d3d3d3;
+	border-radius: 5px;
+	text-align: center;
+	font-size: 1.5em;
+	padding: 5px;
+}
+
+.important.less{
+	background-color: #6c757d;
+}
+
+.important:active{
+	transform: translate(0, 2px);
 }
