--- a/public/css/login.css
+++ b/public/css/login.css
@@ -32,8 +32,9 @@ nav{
 	width: 25vw;
 	background-color: #30103D;
 	color: #d3d3d3;
-	padding: 15px;
+	padding: 15px;	
 	border-radius: 3px;
+	min-width: 375px;
 }
 .content{
 	height: 74vh;
