--- a/public/css/transactions.css
+++ b/public/css/transactions.css
@@ -61,7 +61,9 @@ nav{
 	font-size: 1.5em;
 	text-decoration: none;
 }
-
+table{
+	border-collapse: collapse;
+}
 table, th, td {
 	border:1px solid black;
 }
