--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -61,11 +61,10 @@ nav{
 	font-size: 1.5em;
 	text-decoration: none;
 }
-table{
-	border-collapse: collapse;
-}
-table, th, td {
-	border:1px solid black;
+
+th, td {
+	padding: 15px;
+	text-align: left;
 }
 
 .editbtn{
@@ -107,4 +106,23 @@ table, th, td {
 .editbtn:active{
     position:relative;
 	top:1px;
+}
+
+
+th{
+	text-align: right;
+}
+td{
+	text-align: left;
+}
+
+input[type=text] {
+	width: 100%;
+	padding: 8px 20px;
+	box-sizing: border-box;
+	border-radius: 4px;
+	border: 2px solid #808080
+}
+input[type=text]:focus{
+	border: 2px solid #555555
 }
