--- a/public/css/stores.css
+++ b/public/css/stores.css
@@ -62,6 +62,15 @@ nav{
 	text-decoration: none;
 }
 
+table {
+	border-collapse: collapse;
+}
+  
 table, th, td {
-	border:1px solid black;
+	border: 1px solid black;
+}
+
+th, td {
+	padding: 15px;
+	text-align: left;
 }
