--- a/public/css/stores.css
+++ b/public/css/stores.css
@@ -74,3 +74,9 @@ th, td {
 	padding: 15px;
 	text-align: left;
 }
+input[type=text] {
+	background-image: url('searchicon.png');
+	background-position: 10px 10px; 
+	background-repeat: no-repeat;
+	padding-left: 40px;
+  }
