--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -1,6 +1,7 @@
 *{
 	font-family: sans-serif;
 }
+
 body{
 	margin: 0;
 	display: flex;
@@ -14,12 +15,67 @@ nav{
 }
 
 .header{
-	background-color: #97d4cd;
+	background-color: #6099BC;
 	display: flex;
 	height: 13vh;
 }
+.links-container{
+	display: flex;
+	align-items: flex-end;
+}
+.nav-link{
+	text-decoration: none;
+	margin: 0 15px;
+	color: #f5f1f1;
+	cursor: pointer;
+}
+.nav-link:hover{
+	color: #30103D;
+}
+
+.link-border{
+	border-left: 2px solid #f5f1f1;
+	margin: 0;
+}
+
 .footer{
 	background-color: #b3b3b3;
 	display: flex;
 	height: 13vh;
+}
+
+.logo-img{
+	height: 100%;
+}
+.logo-container{
+	width: 200px;
+}
+.content{
+	height: 74vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+}
+.table-desc{
+	font-size: 1.5em;
+	text-decoration: none;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+th, td {
+	border-bottom: 1px solid #dddddd;
+	padding: 15px;
+	text-align: left;
+}
+input[type=text] {
+	margin: 8px, 0;
+	padding: 8px;
+}
+
+tr:nth-child(even) {
+	background-color: #f2f2f2
 }
