--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -74,8 +74,104 @@ th, td {
 input[type=text] {
 	margin: 8px, 0;
 	padding: 8px;
+	border: 0;
+	border-bottom: 1px solid black;
+	box-shadow: none;
 }
 
-tr:nth-child(even) {
-	background-color: #f2f2f2
+.search-bars{
+	margin: 8px, 0;
+	padding: 8px;
+}
+
+.editbtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px #97d4cd;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #97d4cd;
+	box-shadow:inset 0px 1px 0px 0px #97d4cd;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #97d4cd), color-stop(1, #6099bc));
+	background:-moz-linear-gradient(top, #97d4cd 5%, #6099bc 100%);
+	background:-webkit-linear-gradient(top, #97d4cd 5%, #6099bc 100%);
+	background:-o-linear-gradient(top, #97d4cd 5%, #6099bc 100%);
+	background:-ms-linear-gradient(top, #97d4cd 5%, #6099bc 100%);
+	background:linear-gradient(to bottom, #97d4cd 5%, #6099bc 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#97d4cd', endColorstr='#6099bc',GradientType=0);
+	background-color:#97d4cd;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #6099bc;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:4px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffbc;
+}
+.editbtn:hover{
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6099bc), color-stop(1, #97d4cd));
+	background:-moz-linear-gradient(top, #6099bc 5%, #97d4cd 100%);
+	background:-webkit-linear-gradient(top, #6099bc 5%, #97d4cd 100%);
+	background:-o-linear-gradient(top, #6099bc 5%, #97d4cd 100%);
+	background:-ms-linear-gradient(top, #6099bc 5%, #97d4cd 100%);
+	background:linear-gradient(to bottom, #6099bc 5%, #97d4cd 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6099bc', endColorstr='#97d4cd',GradientType=0);
+	background-color:#6099bc;
+}
+
+.clear{
+	margin-left: 20px;
+    -moz-box-shadow:inset 0px 1px 0px 0px #7285A5;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #7285A5;
+	box-shadow:inset 0px 1px 0px 0px #7285A5;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7285A5), color-stop(1, #4C516D));
+	background:-moz-linear-gradient(top, #7285A5 5%, #4C516D 100%);
+	background:-webkit-linear-gradient(top, #7285A5 5%, #4C516D 100%);
+	background:-o-linear-gradient(top, #7285A5 5%, #4C516D 100%);
+	background:-ms-linear-gradient(top, #7285A5 5%, #4C516D 100%);
+	background:linear-gradient(to bottom, #7285A5 5%, #4C516D 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7285A5', endColorstr='#4C516D',GradientType=0);
+	background-color:7285A5;
+	border:1px solid #4C516D;
+}
+.clear:hover{
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #4C516D), color-stop(1, #7285A5));
+	background:-moz-linear-gradient(top, #4C516D 5%, #7285A5 100%);
+	background:-webkit-linear-gradient(top, #4C516D 5%, #7285A5 100%);
+	background:-o-linear-gradient(top, #4C516D 5%, #7285A5 100%);
+	background:-ms-linear-gradient(top, #4C516D 5%, #7285A5 100%);
+	background:linear-gradient(to bottom, #4C516D 5%, #7285A5 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#4C516D', endColorstr='#7285A5',GradientType=0);
+	background-color: #4C516D;
+}
+
+.editbtn:active{
+    position:relative;
+	top:1px;
+}
+
+.save{
+    -moz-box-shadow:inset 0px 1px 0px 0px #7465A0;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #7465A0;
+	box-shadow:inset 0px 1px 0px 0px #7465A0;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #30103D), color-stop(1, #7465A0));
+	background:-moz-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-webkit-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-o-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-ms-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:linear-gradient(to bottom, #30103D 5%, #7465A0 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#30103D', endColorstr='#7465A0',GradientType=0);
+	background-color:#7465A0;
+	border:1px solid #30103D;
+}
+.save:hover{
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7465A0), color-stop(1, #30103D));
+	background:-moz-linear-gradient(top, #7465A0 5%,#30103D 100%);
+	background:-webkit-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:-o-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:-ms-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:linear-gradient(to bottom, #7465A0 5%, #30103D 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='##7465A0', endColorstr='#30103D',GradientType=0);
+	background-color: #7465A0;
 }
