--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -64,7 +64,17 @@
                 <% } %>  
             </table>
 
-            <table id="search_container" style="display: none;">              
+            <table id="search_container" style="display: none;">
+                <tr>
+                    <th>Store #</th>
+                    <th>Store Name</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Rating</th>
+                    <th>Year Founded</th>
+                </tr>
+                <tr class="copy">
+                </tr>
             </table>
         </div>
 
