--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -175,3 +175,16 @@ input[type=text] {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='##7465A0', endColorstr='#30103D',GradientType=0);
 	background-color: #7465A0;
 }
+
+#msg_container{
+	text-align: center;
+    padding: 15px;
+    color: salmon;
+    font-size: 1.2em;
+    border: 2px solid salmon;
+    margin-bottom: 20px;
+}
+.green{
+	color: lightgreen !important;
+    border: 2px solid darkseagreen !important;
+}
