--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -83,7 +83,7 @@
                             <td><input type="text" name="input_desc" value="<%= item.Description %>"></td>
                             <td><input type="text" name="input_brand" value="<%= item.Brand %>"></td>
                             <td><input type="text" name="input_price" value="<%= item.Price %>"></td>
-                            <td><a href="#" id="save" class="editbtn save" data-upc="<%= item.UPC %>">Save</a></td>
+                            <td><a href="#" class="editbtn save">Save</a></td>
                         </tr>
                     <% } %>  
 
