table overflow fix - stock, trans & stores

--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -44,6 +44,7 @@
                 </form>
                 <br>
             </div>
+            <div style="overflow-y: auto">
             <table id="items_ctn">
                 <form>
                 <tr>
@@ -91,6 +92,7 @@
 
                 </form>            
             </table>
+            </div>
         </div>
 
         <div class="footer">
