--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -33,6 +33,7 @@
             <div class="table-desc">
                 <h4>Transaction History</h4>
             </div>
+            <div style="overflow-y: auto">
             <table>
                 <tr>
                     <th>Transaction #</th>
@@ -54,6 +55,7 @@
                </tr>
                <% } %>               
            </table>
+           </div>
        </div>
 
        <div class="footer">
