--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -43,6 +43,7 @@
                 </form>
                 <br>
             </div>
+            <div style="overflow-y: auto">
             <table id="original_container">
                 <tr>
                     <th>Store #</th>
@@ -63,7 +64,8 @@
                     </tr>
                 <% } %>  
             </table>
-
+            </div>
+            <div style="overflow-y: auto">
             <table id="search_container" style="display: none;">
                 <tr>
                     <th>Store #</th>
@@ -76,6 +78,7 @@
                 <tr class="copy">
                 </tr>
             </table>
+            </div>
         </div>
 
         <div class="footer">
