--- a/public/css/transactions.css
+++ b/public/css/transactions.css
@@ -56,6 +56,7 @@ nav{
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
+	padding-bottom: 15px;
 }
 .table-desc{
 	font-size: 1.5em;
