--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,6 +1,7 @@
 *{
 	font-family: sans-serif;
 }
+
 body{
 	margin: 0;
 	display: flex;
@@ -14,12 +15,85 @@ nav{
 }
 
 .header{
-	background-color: #97d4cd;
+	background-color: #6099BC;
 	display: flex;
 	height: 13vh;
 }
+.links-container{
+	display: flex;
+	align-items: flex-end;
+}
+.nav-link{
+	text-decoration: none;
+	margin: 0 15px;
+	color: #f5f1f1;
+	cursor: pointer;
+}
+.nav-link:hover{
+	color: #30103D;
+}
+.nav-link-box{
+	font-size: 1.5em;
+	text-decoration: none;
+	margin: 0 15px;
+	color: #f5f1f1;
+	cursor: pointer;
+}
+.nav-link-box:hover{
+	color: #FFFFBC;
+}
+
+.link-border{
+	border-left: 2px solid #f5f1f1;
+	margin: 0;
+}
+
 .footer{
 	background-color: #b3b3b3;
 	display: flex;
 	height: 13vh;
+}
+
+.logo-img{
+	height: 100%;
+}
+.logo-container{
+	width: 200px;
+}
+.content{
+	height: 74vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+}
+
+.desc{
+	height: 15%;
+	font-size: 1.5em;
+	text-decoration: none;
+}
+
+.para{
+	height: 85%;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	padding: 0 15px;
+}
+
+.main_img{
+	max-width: 35%;
+	max-height: 85%;
+}
+
+.main_text{
+	max-width: 20%;
+	padding: 15px;
+	display: flex;
+	flex-direction: column;
+}
+
+.main_p{
+	text-indent: 15px;
 }
