--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -56,7 +56,7 @@ nav{
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
-	padding-bottom: 15px;
+	margin-bottom: 15px;
 }
 .table-desc{
 	font-size: 1.5em;
@@ -78,6 +78,7 @@ input[type=text] {
 	border: 0;
 	border-bottom: 1px solid black;
 	box-shadow: none;
+	max-width: 110px;
 }
 
 .search-bars{
@@ -167,6 +168,31 @@ input[type=text] {
 	border:1px solid #30103D;
 }
 .save:hover{
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7465A0), color-stop(1, #30103D));
+	background:-moz-linear-gradient(top, #7465A0 5%,#30103D 100%);
+	background:-webkit-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:-o-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:-ms-linear-gradient(top, #7465A0 5%, #30103D 100%);
+	background:linear-gradient(to bottom, #7465A0 5%, #30103D 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='##7465A0', endColorstr='#30103D',GradientType=0);
+	background-color: #7465A0;
+}
+
+.qty{
+    -moz-box-shadow:inset 0px 1px 0px 0px #7465A0;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #7465A0;
+	box-shadow:inset 0px 1px 0px 0px #7465A0;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #30103D), color-stop(1, #7465A0));
+	background:-moz-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-webkit-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-o-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:-ms-linear-gradient(top, #30103D 5%, #7465A0 100%);
+	background:linear-gradient(to bottom, #30103D 5%, #7465A0 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#30103D', endColorstr='#7465A0',GradientType=0);
+	background-color:#7465A0;
+	border:1px solid #30103D;
+}
+.qty:hover{
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7465A0), color-stop(1, #30103D));
 	background:-moz-linear-gradient(top, #7465A0 5%,#30103D 100%);
 	background:-webkit-linear-gradient(top, #7465A0 5%, #30103D 100%);
