final changes lets hope

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="css/about.css" />
     </head>
     <body>
-        <!--<% if(user_type !== "customer") { %>
+        <% if(user_type !== "customer") { %>
             <div class="header" style="background-color: #7465A0">
-        <% } else { %> -->
+        <% } else { %> 
             <div class="header">
-        <!--<% } %> -->
+        <% } %> 
             <nav>
                 <div class="logo-container">
                     <img src="asset/logo.png" class="logo-img">
