--- a/views/stores.ejs
+++ b/views/stores.ejs
@@ -59,8 +59,8 @@
                         <td><%= store.StoreName %></td>
                         <td><%= store.City %></td>
                         <td><%= store.State %></td>
-                        <td><%= store.Rating %></td>
-                        <td><%= store.YearFounded %></td>
+                        <td><%= store.rating %></td>
+                        <td><%= store.year %></td>
                     </tr>
                 <% } %>  
             </table>
